Fixed alignment of the table header

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -49,11 +49,6 @@ body {
 .td350{ width:350px; }
 .width100pcnt { width:100% }
 
-th{
-  padding-left: 15px !important;
-  padding-right: 15px !important;
-}
-
 .pointer-none{
   pointer-events: none;
 }
@@ -287,9 +282,6 @@ button {
    padding: 5px 10px;
 }
 
-th {
-  text-align: center!important;
-}
 
 td {
   vertical-align: middle!important;
